// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link component getCTA function returns a Dialog content object with a promo item 1`] = `
Object {
  "action": Object {
    "data-gtm": "{\\"id\\":\\"cta-click1\\",\\"action\\":\\"https://www.external.co.uk\\",\\"label\\":\\"string\\"}",
    "href": "https://www.external.co.uk",
    "model": "htmlLink",
    "onClick": [Function],
    "rel": "noopener noreferrer",
    "target": "_blank",
  },
  "label": "string",
}
`;

exports[`Link component getCTA function returns a cta object with a Promo cta 1`] = `
Object {
  "action": Object {
    "data-gtm": "{\\"id\\":\\"cta-click1\\",\\"action\\":\\"https://www.external.co.uk\\",\\"label\\":\\"string\\"}",
    "href": "https://www.external.co.uk",
    "model": "htmlLink",
    "onClick": [Function],
    "rel": "noopener noreferrer",
    "target": "_blank",
  },
  "label": "string",
}
`;

exports[`Link component getCTA function returns a cta object with a simple page cta 1`] = `
Object {
  "action": Object {
    "data-gtm": "{\\"id\\":\\"cta-click1\\",\\"action\\":\\"https://www.external.co.uk\\",\\"label\\":\\"string\\"}",
    "href": "https://www.external.co.uk",
    "model": "htmlLink",
    "onClick": [Function],
    "rel": "noopener noreferrer",
    "target": "_blank",
  },
  "label": "string",
}
`;

exports[`Link component getCTA function returns a cta object with page 1`] = `
Object {
  "action": Object {
    "data-gtm": "{\\"id\\":\\"cta-click1\\",\\"action\\":\\"/no/contact-us\\",\\"label\\":\\"Go to Page\\"}",
    "linkComponent": [MockFunction],
    "model": "routerLink",
    "onClick": [Function],
    "to": "/no/contact-us",
  },
  "label": "Go to Page",
}
`;

exports[`Link component getCTA function returns a null object when a simple page without cta 1`] = `null`;

exports[`Link component getCTA function returns a null object with page with empty path 1`] = `null`;

exports[`Link component getCTA function returns a null object with page without path 1`] = `null`;

exports[`Link component getClickableActionFromUrl function returns a Link router to page path 1`] = `
Object {
  "data-gtm": "{\\"id\\":\\"cta-click1\\",\\"action\\":\\"/en/some-page\\"}",
  "linkComponent": [MockFunction],
  "model": "routerLink",
  "onClick": [Function],
  "to": "/en/some-page",
}
`;

exports[`Link component getClickableActionFromUrl function returns a url 1`] = `
Object {
  "data-gtm": "{\\"id\\":\\"cta-click1\\",\\"action\\":\\"some-page\\"}",
  "href": "some-page",
  "model": "htmlLink",
  "onClick": [Function],
  "rel": "noopener noreferrer",
  "target": "_blank",
}
`;
